[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", features=["rustls"]}
tokio = { version = "1.49.0", features=["full"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
futures = "0.3.31"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"