[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", features=["rustls", "json"]}
tokio = { version = "1.49.0", features=["full"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
futures = "0.3.31"
serde_yaml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tokio-util = "0.7.14"
chrono = { version = "0.4.39", features = ["serde"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
x509-parser = "0.16"
clap = { version = "4.5", features = ["derive"] }